# bitcask-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bc.rs  mmap_b.rs
benches/criterion/Bitcask Sizes/report/: index.html
benches/criterion/Fibonacci/base/: benchmark.json  estimates.json  raw.csv
benches/criterion/Fibonacci/change/: estimates.json
benches/criterion/Fibonacci/new/: sample.json  tukey.json
benches/criterion/Fibonacci/report/: MAD.gnuplot  SD.gnuplot  index.html  index.json  mean.gnuplot  median.gnuplot  pdf.gnuplot  pdf_small.gnuplot  regression.gnuplot  regression_small.gnuplot  slope.gnuplot  typical.gnuplot
benches/criterion/Mmap Sizes/report/: index.html  index.json  lines.gnuplot  violin.gnuplot
benches/criterion/batch-mmap/base/: estimates.json  raw.csv  tukey.json
benches/criterion/batch-mmap/change/: estimates.json
benches/criterion/batch-mmap/new/: benchmark.json  sample.json
benches/criterion/batch-mmap/report/: MAD.gnuplot  SD.gnuplot  index.html  index.json  iteration_times.gnuplot  iteration_times_small.gnuplot  mean.gnuplot  median.gnuplot  pdf.gnuplot  pdf_small.gnuplot  regression.gnuplot  regression_small.gnuplot  relative_iteration_times_small.gnuplot  relative_pdf_small.gnuplot  slope.gnuplot  typical.gnuplot
benches/criterion/bitcask/base/: benchmark.json  sample.json
benches/criterion/report/: index.html  index.json
src/: codec.rs  config.rs  data_file.rs  entry.rs  error.rs  hint.rs  key_value.rs  lib.rs  metadata.rs  mmap.rs  radix_tree.rs  recover.rs  tests.rs  tests_util.rs  util.rs
(+133 files in other folders)
