[package]
name = "bitcask-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.131", features = ["derive"]}
serde_json = { version = "1.0", default-features = true, features = ["alloc"] }
anyhow = "1.0.31"
thiserror = "1.0"
filename = "0.1.1"
crc="2.1.0"
bytes = { version = "1.1.0", features = ["serde"] }
byteorder = "1"
log = {version = "0.4.14", features = ["kv_unstable"]}
qp-trie = "0.7.7"
toml = "0.5.8"
fd-lock = "3.0.2"
chrono = "0.4.19"
kv-log-macro = "1.0.7"
hex = "0.4.3"
tempdir = "0.3.7"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.2"
fslock = "0.2.1"
memmap = "0.7.0"
mmap-storage = "0.10.0"
[dev-dependencies]
names = { version = "0.12.0", default-features = false }
env_logger = "0.9.0"
walkdir = "2"
random = "0.12.2"
rand = "0.8.4"
threadpool = "1.8.1"
simple-logging = "2.0.2"